<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent">

        <ImageView
            android:id = "@+id/starters"
            android:layout_width="75dp"
            android:layout_height="60dp"
            android:src="@drawable/starters"
            android:layout_toLeftOf="@id/mains"
            android:layout_toStartOf="@id/mains"
            android:onClick="starters_dessertsClicked"
            android:layout_margin="16dp"
            android:contentDescription="@string/starters_link" />

        <ImageView
            android:id = "@+id/mains"
            android:layout_width="75dp"
            android:layout_height="60dp"
            android:src="@drawable/mains"
            android:onClick="mains_dessertsClicked"
            android:layout_centerHorizontal="true"
            android:layout_margin="16dp"
            android:contentDescription="@string/mains_link" />

        <ImageView
            android:id = "@+id/order_desserts"
            android:layout_width="75dp"
            android:layout_height="60dp"
            android:src="@drawable/order"
            android:onClick="order_dessertsClicked"
            android:layout_toRightOf="@id/mains"
            android:layout_toEndOf="@id/mains"
            android:layout_margin="16dp"
            android:contentDescription="@string/order_link" />

        <Button
            android:id="@+id/baklava_decrement"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_below="@id/desserts"
            android:onClick="baklavaDecrement"
            android:layout_toStartOf="@id/baklava_quantity_text_view"
            android:layout_toLeftOf="@id/baklava_quantity_text_view"
            android:text="@string/minus" />


        <Button
            android:id="@+id/baklava_increment"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_below="@id/desserts"
            android:layout_alignParentEnd="true"
            android:onClick="baklavaIncrement"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/plus" />

        <Button
            android:id="@+id/galactobureko_decrement"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_below="@id/baklava_price"
            android:onClick="galactobureko_decrement"
            android:layout_toStartOf="@id/galactobureko_quantity_text_view"
            android:layout_toLeftOf="@id/galactobureko_quantity_text_view"
            android:text="@string/minus" />

        <Button
            android:id="@+id/galactobureko_increment"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_below="@id/baklava_price"
            android:onClick="galactobureko_increment"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/plus" />

        <Button
            android:id="@+id/cake_decrement"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_below="@id/galactobureko_price"
            android:onClick="cake_decrement"
            android:layout_toStartOf="@id/cake_quantity_text_view"
            android:layout_toLeftOf="@id/cake_quantity_text_view"
            android:text="@string/minus" />


        <Button
            android:id="@+id/cake_increment"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_below="@id/galactobureko_price"
            android:onClick="cake_increment"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/plus" />


        <Button
            android:id="@+id/ravani_decrement"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_below="@id/cake_price"
            android:onClick="ravani_decrement"
            android:layout_toStartOf="@id/ravani_quantity_text_view"
            android:layout_toLeftOf="@id/ravani_quantity_text_view"
            android:text="@string/minus" />

        <Button
            android:id="@+id/ravani_increment"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_below="@id/cake_price"
            android:onClick="ravani_increment"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/plus" />

        <TextView
            android:id="@+id/desserts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_below="@id/mains"
            android:layout_marginBottom="16dp"
            android:text="@string/desserts"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/baklava_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/desserts"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:text="@string/baklava"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/baklava_quantity_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/desserts"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:layout_toStartOf="@id/baklava_increment"
            android:layout_toLeftOf="@id/baklava_increment"
            android:text="@string/number"
            android:textColor="#000000"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/baklava_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/baklava_increment"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="24dp"
            android:text="@string/baklava_price"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/galactobureko_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/baklava_price"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="8dp"
            android:text="@string/galactobureko"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/galactobureko_quantity_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/baklava_price"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:layout_toStartOf="@id/galactobureko_increment"
            android:layout_toLeftOf="@id/galactobureko_increment"
            android:text="@string/number"
            android:textColor="#000000"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/galactobureko_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/galactobureko_text"
            android:layout_margin="24dp"
            android:text="@string/galactobureko_description"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/galactobureko_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/galactobureko_description"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="24dp"
            android:text="@string/galactobureko_price"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/cake_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/galactobureko_price"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:text="@string/cake"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/cake_quantity_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/galactobureko_price"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:layout_toStartOf="@id/cake_increment"
            android:layout_toLeftOf="@id/cake_increment"
            android:text="@string/number"
            android:textColor="#000000"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/cake_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cake_text"
            android:layout_margin="24dp"
            android:text="@string/cake_description"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/cake_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/cake_description"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="24dp"
            android:text="@string/cake_price"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/ravani_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/cake_price"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="8dp"
            android:text="@string/ravani"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/ravani_quantity_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/cake_price"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:layout_toStartOf="@id/ravani_increment"
            android:layout_toLeftOf="@id/ravani_increment"
            android:text="@string/number"
            android:textColor="#000000"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/ravani_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ravani_text"
            android:layout_margin="24dp"
            android:text="@string/ravani_description"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/ravani_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ravani_description"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="24dp"
            android:text="@string/ravani_price"
            android:textSize="24sp" />

    </RelativeLayout>
</ScrollView>